--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 5px solid $brand-accent;
+    background-color: $white;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -13,13 +13,13 @@
 .site-title {
     font-size: 26px;
     line-height: 56px;
-    letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
     &,
     &:visited {
         color: $grey-color-dark;
+        font-weight: 300;
     }
 }
 
