font weights are broken dammit.

--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,10 @@ $white: #ffffff;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$light: 300;
+$normal: 500;
+$heavy: 700;
+
 
 
 // Using media queries with like this:
