--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@import "bourbon";
+@import "neat";
 @charset "utf-8";
 
 
