--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,9 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
-
-@import "bourbon";
-@import "neat";
 @charset "utf-8";
+@import 'bourbon';
+@import 'neat';
 
 
 
