--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,7 @@
 ---
 
 @charset "utf-8";
-@import 'bourbon';
-@import 'neat';
+@import '../bourbon/bourbon';
 
 // Our variables
 $base-font-family: "freight-sans-pro", Arial, sans-serif;
