--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 
 @charset "utf-8";
 @import '../bourbon/bourbon';
+@import '../neat/neat'
 
 // Our variables
 $base-font-family: "freight-sans-pro", Arial, sans-serif;
