widened header and footer content

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $brand-accent;
+    border-bottom: 5px solid $brand-accent;
     min-height: 56px;
     background-color: $dark-blue;
 
