--- a/css/main.scss
+++ b/css/main.scss
@@ -7,19 +7,19 @@
 @import '../neat/neat';
 
 // Our variables
-$base-font-family: "freight-sans-pro", Arial, sans-serif;
+$base-font-family: "omnes-pro", Arial, sans-serif;
 $base-font-size: 16px;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit: 30px;
 
-$text-color: #111;
+$text-color: #959A91;
 $background-color: #fdfdfd;
 $brand-color: #4B689A;
 $brand-accent: #DCC558;
 
-$grey-color: #828282;
+$grey-color: #959A91;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark: darken($grey-color, 25%);
 $white: #ffffff;
