new pages and buttons

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -214,7 +214,7 @@ pre {
         vertical-align: middle;
 
         path {
-            fill: $grey-color;
+            fill: $yellow;
         }
     }
 }
