--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="jquery-1.11.1.min.js"></script>
     <script src="//use.typekit.net/tgl4auz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
