fixing image loading.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,6 +93,7 @@
 }
 /* main page content */
 .background-image {
+    background-image: url('../images/mullet.jpg');
     position: relative;
 }
 
@@ -111,6 +112,7 @@ img.background-image {
     margin-left: -512px;
   }
 }
+
 .circles{
     position: absolute;
     top: 45%;
