--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ body {
     line-height: $base-line-height;
     font-weight: 500;
     color: $text-color;
-    background-color: $background-color;
+    background-color: $dark-blue;
     -webkit-text-size-adjust: 100%;
 }
 
