--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -205,15 +205,5 @@ pre {
  * Icons
  */
 .icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $yellow;
-        }
-    }
+    color: $yellow;
 }
