--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <script>try{Typekit.load();}catch(e){}</script>
     <script type="text/javascript">
         var my_image = new Image();
-        my_image.src = '../images/mullet.jpg';
+        my_image.src = '../images/mainpic.jpg';
     </script>
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
