--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,11 @@
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//use.typekit.net/tgl4auz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-    <script type="text/javascript">
-        var my_image = new Image();
-        my_image.src = '../images/mainpic.jpg';
+    <script>
+        // Picture element HTML5 shiv
+        document.createElement( "picture" );
+    </script>
+    <script src="../js/picturefill.min.js" async>
     </script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
