--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -113,7 +113,7 @@ blockquote {
     font-size: 18px;
     letter-spacing: -1px;
     font-style: italic;
-
+    line-height: $base-line-height;
     > :last-child {
         margin-bottom: 0;
     }
