--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 @import '../neat/neat';
 
 // Our variables
-$base-font-family: "omnes-pro", Arial, sans-serif;
+$base-font-family: "freight-sans-pro", Arial, sans-serif;
 $base-font-size: 16px;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
