--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,7 @@
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="//use.typekit.net/tgl4auz.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
-    <script>
-        // Picture element HTML5 shiv
-        document.createElement( "picture" );
-    </script>
-    <script src="../js/picturefill.min.js" async>
-    </script>
+    <script src="../js/tabs.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
