--- a/_sass/_features.scss
+++ b/_sass/_features.scss
@@ -1,16 +1,16 @@
-// Refills Tabs
+//Refills tabs
 
 .accordion-tabs-minimal {
-  $tab-border-color: $grey-color;
+  $tab-border-color: $grey;
   $tab-border: 1px solid $tab-border-color;
   $tab-content-background: $background-color;
-  $tab-active-background: $background-color;
+  $tab-active-background: $tab-content-background;
   $tab-inactive-color: $background-color;
-  $tab-inactive-hover-color: $blue;
-  $tab-mode: 960px;
+  $tab-inactive-hover-color: darken($grey, 5);
+  $tab-mode: $on-laptop;
 
   @include clearfix;
-  margin-bottom: $spacing-unit;
+  margin-bottom: 1.5em;
 
   li.tab-header-and-content {
     @include media($tab-mode) {
@@ -20,13 +20,11 @@
 
   a.tab-link {
     background-color: $tab-inactive-color;
-    border-top: 0;
+    border-top: $tab-border;
     color: $dark-blue;
-    display: inline-block;
-    vertical-align: baseline;
-    zoom: 1;
+    display: block;
     font-weight: 400;
-    padding: 10px 15px;
+    padding: 1.5em/2 1.618em;
 
     @include media($tab-mode) {
       @include inline-block;
@@ -46,7 +44,7 @@
 
       @include media($tab-mode) {
         border: $tab-border;
-        border-bottom-color: $white;
+        border-bottom-color: $tab-active-background;
         margin-bottom: -1px;
       }
     }
@@ -54,10 +52,11 @@
 
   .tab-content {
     display: none;
-    padding: 1.5em 1.618em;;
+    padding: 1.5em 1.618em;
 
     @include media($tab-mode) {
       border-top: $tab-border;
+      float: left;
     }
   }
 }
