--- a/main.css
+++ b/main.css
@@ -14,3 +14,17 @@
 body {
   padding-top: 70px;
 }
+
+.header {
+  display: table;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: url('/images/onmybike.jpg');
+}
+
+.text-vertical-center {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
