--- a/main.css
+++ b/main.css
@@ -20,7 +20,8 @@ body {
   position: relative;
   height: 100%;
   width: 100%;
-  background: url('/images/onmybike.jpg');
+  background: url('/images/onmybike.jpg') no-repeat center center scroll;
+  background-size: cover;
 }
 
 .text-vertical-center {
