--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
   position: relative;
   height: 100%;
   width: 100%;
-  background: url('/images/onmybike.jpg') no-repeat center center scroll;
+  background: url('/images/onmybike1.jpg') no-repeat center center scroll;
   background-size: cover;
 }
 
