--- a/main.css
+++ b/main.css
@@ -38,8 +38,7 @@ h1 {
   position: relative;
   height: 100%;
   width: 100%;
-  background: url('/images/onmybike1.jpg') no-repeat center center scroll;
-  background-size: cover;
+  background-color: #ffcb78;
 }
 
 .text-vertical-center {
@@ -51,7 +50,7 @@ h1 {
 .navbar-default {
   background-image: none;
   box-shadow: none;
-  background-color: #86d145;
+  background-color: #ffcb78;
   border: none;
   font-size: 16px;
 }
@@ -81,8 +80,8 @@ h1 {
   border-color: #6ab22a;
 }
 
-.orange-bg {
-  background-color: #ffd072;
+.green-bg {
+  background-color: #86d145;
 }
 
 .avatar {
