--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body {
+  position: relative;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: "brandon-grotesque";
 }
@@ -19,8 +23,8 @@ h1 {
 }
 
 .content-buffer {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 768px) {
