--- a/main.css
+++ b/main.css
@@ -14,8 +14,8 @@ h1 {
   font-weight: 700;
 }
 
-a, a:hover {
-  text-decoration: none;
+a, a:hover, a:visited {
+  text-decoration: none !important;
   color: #000000;
 }
 
