--- a/main.css
+++ b/main.css
@@ -14,6 +14,12 @@ h1 {
   font-weight: 700;
 }
 
+h2 {
+  background-color: #00C4C4;
+  color: #fff;
+  padding: 5px 10px;
+}
+
 a, a:hover, a:visited {
   text-decoration: none !important;
   color: #000000;
@@ -54,6 +60,10 @@ a, a:hover, a:visited {
 
 .special-link {
   color: #00C4C4;
+}
+
+.avatar {
+  margin: -20px 0 50px 0;
 }
 
 .text-vertical-center {
