--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ a, a:hover, a:visited {
   color: #000000;
 }
 
+ul {
+  list-style: none;
+}
+
 .navbar {
   background-color: #ffffff;
 }
@@ -42,6 +46,10 @@ a, a:hover, a:visited {
   margin-bottom: 50px;
 }
 
+.margin-top-fix {
+  margin-top: -40px;
+}
+
 .alt-nav {
   display: none;
 }
@@ -56,6 +64,9 @@ a, a:hover, a:visited {
     background: url("images/brand-01-blk.svg") no-repeat center;
     height: 150px;
   }
+  .avatar {
+    margin: 0 auto;
+  }
 }
 
 .special-link {
@@ -63,7 +74,7 @@ a, a:hover, a:visited {
 }
 
 .avatar {
-  margin: -20px 0 50px 0;
+  margin: -20px 0 30px 0;
 }
 
 .text-vertical-center {
@@ -112,3 +123,5 @@ a, a:hover, a:visited {
 .image-border {
   border: 1px solid #e8e8e8;
 }
+
+
